stoat/tests/snapshots/snapshots/snapshots__lsp__picker-filtered.snap
---
source: stoat/tests/snapshots/lsp.rs
expression: app.snapshot_active()
---
[editor] pane=0 mode=symbol_picker ctx=SymbolPicker
input: "ma|"
> fn      main
  const   MAX_SIZE
